FIX: Closes #65, login form disappear on top when focus on input on mobile

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -23,16 +23,18 @@ page-login {
     justify-content: center;
     text-align: center;
 }
-ion-card.card {
+
+#login-card {
     box-shadow: none;
     background: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     width: 85%;
     margin: auto;
+    padding: 16px;
 }
 
 @media(min-width: 769px) {
-    ion-card.card {
+    #login-card {
         width: 33%;
         margin: auto;
     }
